--- a/doom.d/config.org
+++ b/doom.d/config.org
@@ -3,7 +3,7 @@
 #+begin_src emacs-lisp
 
 (setq user-full-name "JJ Kim"
-      user-mail-address "wavetojj@gmail.com")
+      user-mail-address "jj@haedosa.xyz")
 
 #+end_src
 
@@ -15,6 +15,59 @@
 
 #+end_src
 
+* Font
+** Set the Face Font
+
+#+begin_src emacs-lisp
+
+(use-package! face-remap
+  :custom-face
+  (default ((t (:family "Mononoki Nerd Font Mono"))))
+  (fixed-pitch ((t (:family "Mononoki Nerd Font Mono"))))
+  ;; (variable-pitch ((t (:family "SeoulHangang CB"))))
+  (variable-pitch ((t (:family "Noto Sans CJK KR"))))
+)
+
+;; M-x counsel-fonts for other font options
+;; (use-package! face-remap
+;;   :custom-face
+;;   (default ((t (:family "SauceCodePro Nerd Font Mono"))))
+;;   (fixed-pitch ((t (:family "SauceCodePro Nerd Font Mono"))))
+;;   (variable-pitch ((t (:family "SauceCodePro Nerd Font"))))
+;; )
+
+#+end_src
+
+** Mixed-pitch
+
+#+begin_src emacs-lisp
+
+(use-package! mixed-pitch
+  :hook
+  (org-mode . mixed-pitch-mode)
+)
+
+#+end_src
+
+** Org Header Font Style
+
+#+begin_src emacs-lisp
+
+(defun my/org-hearder-size()
+  (dolist (face '((org-level-1 . 1.3)
+                  (org-level-2 . 1.2)
+                  (org-level-3 . 1.1)
+                  (org-level-4 . 1.1)
+                  (org-level-5 . 1.1)
+                  (org-level-6 . 1.0)
+                  (org-level-7 . 1.0)
+                  (org-level-8 . 1.0)))
+    (set-face-attribute (car face) nil :height (cdr face)))
+)
+
+(add-hook 'org-mode-hook #'my/org-hearder-size)
+
+#+end_src
 * Hangul
 
 #+begin_src emacs-lisp
@@ -23,19 +76,32 @@
 
 #+end_src
 
-* Org
-
-#+begin_src emacs-lisp
-
-(setq org-directory "~/Org/")
-
-#+end_src
-
 * Display Line Number
 
 #+begin_src emacs-lisp
 
 (setq display-line-numbers-type t)
+
+#+end_src
+
+* Backup
+
+#+begin_src emacs-lisp
+
+(setq-default backup-directory-alist '(("" . "~/.backup"))
+              make-backup-files t
+              vc-make-backup-files t
+              backup-by-copying t
+              version-control t
+              delete-old-versions t
+              kept-new-versions 99
+              kept-old-versions 0
+)
+
+(defun force-backup-of-buffer ()
+  (setq buffer-backed-up nil)
+  (backup-buffer))
+(add-hook 'before-save-hook  'force-backup-of-buffer)
 
 #+end_src
 
@@ -56,16 +122,6 @@
 
 #+end_src
 
-* All-the-icons-dired
-
-#+begin_src emacs-lisp
-
-(use-package! all-the-icons-dired
-  :after all-the-icons dired
-  :hook (dired-mode . all-the-icons-dired-mode))
-
-#+end_src
-
 * lsp
 ** lsp
 
@@ -74,6 +130,7 @@
 (use-package! lsp-mode
   :custom
   (lsp-completion-enable-additional-text-edit nil)
+  (lsp-lens-enable nil)
   :hook (lsp-mode . (lambda ()
      (lsp-ui-mode)
      (lsp-ui-doc-mode)
@@ -95,7 +152,10 @@
 
 #+begin_src emacs-lisp
 
-(setq lsp-ui-doc-position 'top)
+(after! lsp-ui
+  (setq lsp-ui-doc-position 'top)
+  (setq lsp-ui-doc-show-with-cursor t)
+  (setq lsp-ui-sideline-show-code-actions t))
 
 (defun my/cycle-lsp-ui-doc-position ()
   (interactive)
@@ -106,6 +166,13 @@
               ((eq x 'at-point) 'top))))
 )
 
+(defun set-lsp-ui-doc-size()
+  (interactive)
+  (setq lsp-ui-doc-text-scale-level 2)
+  (setq lsp-ui-doc-max-width 300)
+  (setq lsp-ui-doc-max-height 50))
+
+
 #+end_src
 
 ** lsp-haskell
@@ -114,23 +181,61 @@
 
 (use-package! lsp-haskell
   :hook ((haskell-mode . lsp-deferred)
-         (haskell-mode . (lambda () (lsp-ui-mode)
-                                    (lsp-ui-doc-mode)))))
+         (haskell-mode . (lambda ()
+                           (set-tab-width)
+                           (set-lsp-ui-doc-size)
+                           (lsp-ui-mode)
+                           (lsp-ui-doc-mode)))))
 
 #+end_src
 
+** lsp-mode issue
+
+https://github.com/hlissner/doom-emacs/issues/5904
+
+#+begin_src emacs-lisp
+
+;; add to $DOOMDIR/config.el
+(after! lsp-mode
+  (advice-remove #'lsp #'+lsp-dont-prompt-to-install-servers-maybe-a))
+
+#+end_src
 * Dired
+** Dired-hide-dotfiles
 
-FIXME: This does not work. I am getting wrong type argument error.
+#+begin_src emacs-lisp
 
-#+begin_src emacs-lisp :tangle no
+(use-package! dired-hide-dotfiles
+  :after dired
+  :hook (dired-mode . dired-hide-dotfiles-mode)
+  :config
+    (map! (:map dired-mode-map
+           :n "H" #'dired-hide-dotfiles-mode)))
 
-(map!
-  (:map dired-mode-map
-    :n "h" #'dired-single-up-directory
-    :n "l" #'dired-single-buffer
-    :n "<left>" #'dired-single-up-directory
-    :n "<right>" #'dired-single-buffer))
+#+end_src
+
+** Dired-ranger
+
+#+begin_src emacs-lisp
+
+(use-package! dired-ranger
+  :after dired
+  :bind (:map dired-mode-map
+          ("C-c C-b" . dired-ranger-bookmark)
+          ("C-c C-v" . dired-ranger-bookmark-visit)
+          ("C-c C-p" . dired-ranger-paste)
+          ("C-c C-y" . dired-ranger-copy)
+          ("C-c C-x" . dired-ranger-move))
+)
+#+end_src
+
+** All-the-icons-dired
+
+#+begin_src emacs-lisp
+
+(use-package! all-the-icons-dired
+  :after all-the-icons dired
+  :hook (dired-mode . all-the-icons-dired-mode))
 
 #+end_src
 
@@ -149,38 +254,327 @@ FIXME: This does not work. I am getting wrong type argument error.
 
 #+end_src
 
-* Counsel-rg
+* Custom Keybindings
 
 #+begin_src emacs-lisp
 
-(map! :leader "r" #'counsel-rg)
+(map! :leader
+      "r" #'counsel-rg
+      ">" #'counsel-fzf
+      "d" #'dired-jump
+      )
 
 #+end_src
 
-* Evil-little-word
+* Evil
+** Evil-little-word
 
 #+begin_src emacs-lisp
 
 (use-package! evil-little-word
-  :after (evil)
+  :after evil
   :config
   (general-define-key
     :keymaps '(insert normal visual motion operater)
-    "C-j"           'evil-forward-little-word-begin
-    "C-l"           'evil-forward-little-word-end
-    "C-k"           'evil-backward-little-word-begin
-    "C-h"           'evil-backward-little-word-end
+    "C-j" 'evil-forward-little-word-begin
+    "C-l" 'evil-forward-little-word-end
+    "C-k" 'evil-backward-little-word-begin
+    "C-h" 'evil-backward-little-word-end
   )
   (general-define-key
      :keymaps 'evil-inner-text-objects-map
-    "C-j"          '(evil-inner-little-word :wk "little-word")
-    "C-l"          '(evil-inner-little-word :wk "little-word")
+    "C-j" '(evil-inner-little-word :wk "little-word")
+    "C-l" '(evil-inner-little-word :wk "little-word")
   )
   (general-define-key
      :keymaps 'evil-outer-text-objects-map
-    "C-j"          '(evil-a-little-word :wk "little-word")
-    "C-l"          '(evil-a-little-word :wk "little-word")
+    "C-j" '(evil-a-little-word :wk "little-word")
+    "C-l" '(evil-a-little-word :wk "little-word")
   )
 )
+
+#+end_src
+
+** Evil-textobj-between
+
+#+begin_src emacs-lisp
+
+(use-package! evil-textobj-between
+  :after evil
+)
+
+#+end_src
+
+** Evil-shift-width
+
+#+begin_src emacs-lisp
+
+(setq-default tab-width 2)
+(setq-default evil-shift-width tab-width)
+(setq-default indent-tabs-mode nil)
+
+(defun set-tab-width()
+  (interactive)
+  (setq tab-width 2)
+  (setq evil-shift-width tab-width)
+  (setq indent-tabs-mode nil))
+
+
+#+end_src
+
+** Evil-Snipe
+
+#+begin_src emacs-lisp
+
+(setq-default evil-snipe-scope 'buffer)
+
+#+end_src
+
+* Rg
+
+#+begin_src emacs-lisp
+
+(use-package! rg
+  :commands (rg rg-menu)
+  :bind ("C-c s" . rg-menu)
+  :config
+  (message "rg loaded")
+)
+
+#+end_src
+
+* Whitespace
+
+#+begin_src emacs-lisp
+
+(use-package! whitespace
+  :custom (whitespace-style '(face tabs trailing
+                              space-before-tab
+                              newline empty
+                              space-after-tab))
+  :hook (((prog-mode org-mode) . whitespace-mode)
+         (before-save . delete-trailing-whitespace))
+)
+
+#+end_src
+
+* Undo-tree
+
+#+begin_src emacs-lisp
+
+(use-package! undo-tree
+  :hook (((prog-mode org-mode) . undo-tree-mode))
+)
+
+#+end_src
+
+* Windsize
+
+#+begin_src emacs-lisp
+
+(use-package! windsize
+  :custom
+  (windsize-cols 1)
+  (windsize-rows 1)
+  :commands windsize-left windsize-right
+            windsize-up windsize-down
+)
+
+(map!
+  "C-S-h" #'windsize-left
+  "C-S-l" #'windsize-right
+  "C-S-k" #'windsize-up
+  "C-S-j" #'windsize-down
+)
+
+#+end_src
+
+* Winum
+
+#+begin_src emacs-lisp
+
+(use-package! winum
+  :config
+  (winum-mode 1)
+)
+
+#+end_src
+
+* Org Mode
+** Org Archive
+
+#+begin_src emacs-lisp
+
+  (defun my/org-archive()
+    (setq
+      org-archive-mark-done nil
+      org-archive-location "%s_arxiv::"
+    )
+  )
+
+#+end_src
+
+** Org Capture
+
+#+begin_src emacs-lisp
+
+  (defun my/org-capture()
+     (setq org-capture-templates `(
+            ("h" "Haedosa" entry
+              (file+olp+datetree ,(concat org-directory "/haedosa/README.org"))
+              "* %? %U\n%a\n%i"
+            )
+            ("m" "Memo" entry
+              (file+olp+datetree ,(concat org-directory "/memo/memo.org"))
+              "* %? %U\n%a\n%i"
+            )
+          ))
+  )
+
+#+end_src
+
+** Org Agenda
+
+#+begin_src emacs-lisp
+
+  (defun my/org-agenda()
+    (setq org-agenda-files
+       (list
+          (concat org-directory "/haedosa/README.org")
+          (concat org-directory "/memo/memo.org")
+       )
+    )
+
+    (setq org-agenda-ndays 7
+          org-agenda-show-all-dates t)
+  )
+
+#+end_src
+
+** Org Babel
+
+#+begin_src emacs-lisp
+
+  (defun my/org-babel()
+
+    (org-babel-do-load-languages
+      'org-babel-load-languages
+      '((haskell . t)
+        (emacs-lisp . t)
+        (shell . t)
+        (sql . t)
+        (ruby . t)
+        (python . t)
+        (maxima . t)
+        (C . t)
+        (R . t)
+        (latex . t)
+        (ditaa . t)
+        (java . t))
+    )
+
+    (setq org-catch-invisible-edits           'show
+          org-src-preserve-indentation        t
+          org-src-tab-acts-natively           t
+          org-fontify-quote-and-verse-blocks  t
+          org-return-follows-link             t
+          org-edit-src-content-indentation    0
+          org-src-fontify-natively            t
+          org-confirm-babel-evaluate          nil
+    )
+  )
+
+#+end_src
+
+** Org id
+
+=org-id-new= creates an uuid (e.g. A11DC7CB-D0ED-4C63-9941-8E692945823A), which
+is served as org-attach path. What bugged me for while is that the uuid is in
+the downcase on linux (e.g. a11dc7cb-d0ed-4c63-9941-8e692945823a) while it is in
+the upcase on mac (e.g. A11DC7CB-D0ED-4C63-9941-8E692945823A). This discrepancy
+causes conflict in syncing files between linux and mac.
+
+#+begin_src emacs-lisp
+
+  (defun my/org-id()
+    (advice-add 'org-id-new :filter-return #'upcase)
+  )
+
+#+end_src
+
+** Org
+
+#+begin_src emacs-lisp
+
+(use-package! org
+  :custom
+  (org-directory                       "~/Org")
+  (org-ellipsis                        " ▾")
+  (org-src-fontify-natively            t)
+  (org-src-tab-acts-natively           t)
+  (org-hide-block-startup              nil)
+  (org-src-preserve-indentation        t)
+  (org-startup-folded                  'content)
+  (org-startup-indented                t)
+  (org-startup-with-inline-images      nil)
+  (org-hide-leading-stars              t)
+  (org-attach-id-dir                   "data/")
+  (org-export-with-sub-superscripts (quote {}))
+  :config
+  (my/org-archive)
+  (my/org-capture)
+  (my/org-agenda)
+  (my/org-babel)
+  (my/org-id)
+)
+
+#+end_src
+
+* String-Inflection
+
+#+begin_src emacs-lisp
+
+(use-package! string-inflection)
+
+#+end_src
+
+* Additional Lookup Providers
+
+#+begin_src emacs-lisp
+
+(mapc (lambda (x) (add-to-list '+lookup-provider-url-alist x))
+      (list
+        '("Hackage"           "http://hackage.haskell.org/package/%s")
+        '("Hoogle"            "http://www.haskell.org/hoogle/?q=%s")
+        '("Haedosa Gitlab"    "https://gitlab.com/search?group_id=12624055&search=%s")
+        '("Dictionary"        "http://dictionary.reference.com/browse/%s")
+        '("Thesaurus"         "http://thesaurus.reference.com/search?q=%s")
+        '("Google Scholar"    "https://scholar.google.com/scholar?q=%s")
+        '("Nix Packages"      "https://search.nixos.org/packages?channel=unstable&query=%s")
+        '("Nix Options"       "https://search.nixos.org/options?channel=unstable&query=%s")
+        '("Libgen"            "http://libgen.rs/search.php?req=%s")))
+
+#+end_src
+
+* Avy Keybindings
+
+#+begin_src emacs-lisp
+
+(map! :leader
+      (:prefix-map ("a" . "avy")
+        :desc "avy-goto-char-2" "2" #'avy-goto-char-2
+        :desc "avy-goto-char-timer" "a" #'avy-goto-char-timer
+        :desc "avy-goto-line" "l" #'avy-goto-line
+        :desc "avy-goto-word-0" "w" #'avy-goto-word-0
+        :desc "avy-goto-subword-0" "s" #'avy-goto-subword-0
+        :desc "avy-resume" "r" #'avy-resume
+        :desc "avy-transpose-lines-in-region" "t" #'avy-transpose-lines-in-region
+        (:prefix ("c" . "copy")
+           :desc "avy-copy-region" "r" #'avy-copy-region
+           :desc "avy-copy-line" "l" #'avy-copy-line)
+        (:prefix ("m" . "move")
+           :desc "avy-move-region" "r" #'avy-move-region
+           :desc "avy-move-line" "l" #'avy-move-line)
+      ))
 
 #+end_src
